Fix line-wrap in Chrome for txt files [OSF-5875]

--- a/mfr/extensions/codepygments/static/css/default.css
+++ b/mfr/extensions/codepygments/static/css/default.css
@@ -71,6 +71,7 @@ pre {
     line-height: 1.42857;
     background-color: #F5F5F5;
     border: 1px solid #CCC;
+    white-space:pre-line;
 }
 
 code, kbd, pre, samp {
